sample/retrieveUnpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <description>The relationship the contact person in relation to the complaint</description>
        <inlineHelpText>The relationship the contact person in relation to the complaint</inlineHelpText>
        <label>Contact Relationship</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Contact Type</description>
        <inlineHelpText>This field contains information that is parsed to BRE for SMR Cases.</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B/O Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B/O Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address__c</fullName>
        <label>(HIDDEN) Correspondence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Drainage__c</fullName>
        <description>Current Drainage</description>
        <label>Current Drainage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Due_Date__c</fullName>
        <formula>Billing_Account__r.Current_Bill_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Parks__c</fullName>
        <description>Current Parks</description>
        <label>Current Parks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Mailing_Address__c</fullName>
        <formula>Billing_Account__r.Customer__r.BillingStreet &amp;br()&amp;Billing_Account__r.Customer__r.BillingCity&amp;&quot; &quot;&amp;Billing_Account__r.Customer__r.BillingState&amp; Billing_Account__r.Customer__r.BillingPostalCode &amp;br()&amp;Billing_Account__r.Customer__r.BillingCountry</formula>
        <label>Customer Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_Portal__c</fullName>
        <description>Free form name for portal</description>
        <label>Customer Name (Portal)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_Portal__c</fullName>
        <description>Free form customer number</description>
        <label>Customer Number (Portal)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Interim_Reason__c</fullName>
        <label>Reason for Extension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Interim__c</fullName>
        <inlineHelpText>The field captures the Date when Due Date extension was initiated.</inlineHelpText>
        <label>Date Interim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <inlineHelpText>Date of upfront payment</inlineHelpText>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Till_Due__c</fullName>
        <formula>Due_Date__c -Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Till Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete_Reason__c</fullName>
        <label>Delete Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No longer at the property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of card details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dialysis_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dialysis Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drainage_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drainage Paid</description>
        <label>Drainage Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drainage_Period_From__c</fullName>
        <description>Drainage Period From</description>
        <label>Drainage Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drainage_Period_To__c</fullName>
        <description>Drainage Period To</description>
        <label>Drainage Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EWOV_Type__c</fullName>
        <label>EWOV Type</label>
        <picklist>
            <controllingField>Complaint_Type__c</controllingField>
            <picklistValues>
                <fullName>Investigative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a case status is moved to &quot;escalated&quot;.</description>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evidence_of_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evidence of Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Order_1__c</fullName>
        <label>Existing Order 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Order_2__c</fullName>
        <label>Existing Order 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Reading__c</fullName>
        <description>Existing Reading</description>
        <label>Existing Reading</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Order 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Order 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expression_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An orphaned Expression of Interest because it couldn&apos;t be matched to a Billing Account</description>
        <label>Expression of Interest</label>
        <referenceTo>Expression_of_Interest__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extend_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that due date has been extended.</description>
        <label>Extend Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Faulty_Stop_Tap__c</fullName>
        <label>Faulty Stop Tap?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <picklist>
            <picklistValues>
                <fullName>Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Article</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Officer_Name__c</fullName>
        <label>Field Officer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address__c</fullName>
        <description>this address is not linked to QAS</description>
        <label>Forwarding Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FutureCity__c</fullName>
        <label>Future City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FuturePostCode__c</fullName>
        <label>Future Post Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FutureState__c</fullName>
        <label>Future State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FutureStreetAddress__c</fullName>
        <label>Future Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Address_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag which is set by time based workflow to check the box when the &apos;Applicable Date&apos; is reached. This will fire a trigger to copy the Future Address to the Billing Account</description>
        <label>Future Address Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Attention__c</fullName>
        <label>Future Attention</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Care_Of__c</fullName>
        <label>Future Care Of</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Country__c</fullName>
        <label>Future Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_DPID__c</fullName>
        <label>Future DPID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Owner_Team__c</fullName>
        <label>Owner&apos;s Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Send_NOS_Processed_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Send NOS Processed Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardship_Details__c</fullName>
        <label>Hardship Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hardship_Evident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardship Evident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_the_Leak_been_repaired__c</fullName>
        <label>Has the Leak been repaired?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a (If n/a, add reason in case comment)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Send_to_LL_on_Demand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Send to LL on Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Issues that are a pain point with customers and may lead to growing dissatisfaction and/or complaints.  We encourage all employees to identify hot issues so that we can quickly spot emerging trends and be more proactive in our response.</inlineHelpText>
        <label>Hot Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_Calc_Trade_Waste_Vol_Amount__c</fullName>
        <label>Calculated Trade Waste Volumetric Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Company_Trading_On_Or_After_Settlemen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Company trading on or after settlemen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_Date_Of_Settlement__c</fullName>
        <label>Date of Settlement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Drain_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Drain Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Drain_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Drain Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Drain_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Drainage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Fire_Service_Fee_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Fire Service Fee Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Fire_Service_Fee_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Fire Service Fee Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Fire_Service_Fee_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Fire Service Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Fire_Usage_Daily_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Fire Usage Daily Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Food_Waste_Fee_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Food Waste Fee Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Food_Waste_Fee_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Food Waste Fee Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Food_Waste_Fee_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Food Waste Service</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Last_Read_Date__c</fullName>
        <description>Information Statement Update field</description>
        <label>Last Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Legal_Costs__c</fullName>
        <description>Information Statement Update field</description>
        <label>Legal Costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Lien_Current_Balance__c</fullName>
        <description>Information Statement Update field</description>
        <label>Lien Current Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Other_Arrears__c</fullName>
        <description>Information Statement Update field</description>
        <label>Other Arrears</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Parks_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Parks Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Parks_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Parks Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Parks_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Parks</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Prod_Ceasing_Earlier_Than_Settle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is production ceasing before settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_Recycle_Service_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Recycle Service Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Recycle_Service_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Recycle Service Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Recycle_Service_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Recycled Water Service</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Recycle_Usage_Daily_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Recycle Usage Daily Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Retrieve_Date__c</fullName>
        <label>Information Statement Retrieve Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IS_Sewerage_Disposal_Daily_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Sewerage Disposal Daily Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Sewerage_Service_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Sewerage Service Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Sewerage_Service_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Sewerage Service Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Sewerage_Service_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Sewerage Service</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Special_Read_Arranged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special read arranged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_Trade_Waste_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information Statement Update field</description>
        <label>Trade Waste Usage Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_Trade_Waste_Fee_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Trade Waste Fee Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Trade_Waste_Fee_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Trade Waste Fee Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Trade_Waste_Fee_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Trade Waste Agreement Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Usage_Owing__c</fullName>
        <description>Information Statement Update field</description>
        <label>Usage Owing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Water_Service_Bill_From__c</fullName>
        <description>Information Statement Update field</description>
        <label>Water Service Bill From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Water_Service_Bill_To__c</fullName>
        <description>Information Statement Update field</description>
        <label>Water Service Bill To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Water_Service_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Water Service</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Water_Usage_Daily_Charge__c</fullName>
        <description>Information Statement Update field</description>
        <label>Water Usage Daily Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_What_Date_Are_They_Ceasing__c</fullName>
        <label>What date are they ceasing?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Information_Int_Long__c</fullName>
        <label>Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_Int__c</fullName>
        <description>DO NOT USE - use Information_Int_Long__c instead
(only used in one code in CaseUtil)</description>
        <label>(HIDDEN) Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Needed__c</fullName>
        <defaultValue>&quot;1. Provide a description on what the article feedback or article suggestion is.&quot; &amp;BR()&amp; 
&quot;2. Have there been other customer cases where this information may have been helpful or a customer has asked the same question? If so, provide the case information.&quot; &amp;BR()&amp; 
&quot;3. If the feedback relates to an existing article or there is existing information that will help write a new article, please attach it to the case once you’ve saved this article feedback case.&quot; &amp;BR()&amp; 
&quot;4.List any relevant subject matter experts who can provide information to help write the article.&quot;</defaultValue>
        <label>Information Needed</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_Statement_Advice__c</fullName>
        <label>Information Statement Advice</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspection_Read_1__c</fullName>
        <label>Inspection Read 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Read_2__c</fullName>
        <label>Inspection Read 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interimed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who interimed (changed the due date) of the case</description>
        <label>Interimed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Interimed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Done_at_the_Back_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done at the Back End?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Letter_to_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Letter to Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Letter_to_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Letter to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMR_Amend_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amend - Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMR_Amend_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amend - Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMR_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMR_Create_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create - Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMR_Create_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create - Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suspend_Recovery_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suspend_Recovery_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suspend_Recovery_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Category__c</fullName>
        <label>Knowledge Category</label>
        <picklist>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving in and moving out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products and services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mysoutheastwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service faults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing and charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Billed_Reading__c</fullName>
        <label>Last Billed Reading</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Read_Date__c</fullName>
        <label>Last Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Recovery_Action_Date__c</fullName>
        <formula>Billing_Account__r.Recovery_Last_Action_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Recovery Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Recovery_Action__c</fullName>
        <formula>Billing_Account__r.Recovery_Last_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Recovery Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Costs__c</fullName>
        <description>Legal Costs</description>
        <label>Legal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal Customer</description>
        <inlineHelpText>Legal Customer</inlineHelpText>
        <label>Legal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_to_Agent__c</fullName>
        <inlineHelpText>Letter sent to Agent to confirm New Tenancy details or if the property is NSM then the Agent will be informed by letter that we are unable to bill the tenant.</inlineHelpText>
        <label>Letter to Agent</label>
        <picklist>
            <controllingField>Contact_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_to_Owner__c</fullName>
        <inlineHelpText>Letter sent to Owner to confirm New Tenancy details or if the property is NSM then the Owner will be informed by letter that we are unable to bill the tenant.</inlineHelpText>
        <label>Letter to Owner</label>
        <picklist>
            <controllingField>Contact_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meter1_Reading__c</fullName>
        <description>Meter Reading</description>
        <inlineHelpText>Meter Reading</inlineHelpText>
        <label>Meter 1 Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter1_Serial__c</fullName>
        <label>Meter 1 Serial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_2_Reading__c</fullName>
        <label>Meter 2 Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_2_Serial__c</fullName>
        <label>Meter 2 Serial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Reading_after_repair__c</fullName>
        <label>Meter Reading after repair</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Move_In_Out_Date__c</fullName>
        <label>Move In / Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_In_Property__c</fullName>
        <label>(HIDDEN) Move In Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOS_Exception__c</fullName>
        <label>NOS Exception</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <inlineHelpText>Copy the New Address to Future Address on Customer.</inlineHelpText>
        <label>New Address</label>
        <type>TextArea</type>
    </fields>
</CustomObject>